# CIDA

./: .gitignore  LICENSE  README.md
cida/: LICENSE  README.md  pyproject.toml  requirements.txt
cida/src/cida/: __main__.py
cida/src/cida/models/: backbone.py  heads.py  model.py
cida/src/cida/regularizers/: losses.py
cida/src/cida/training/: train.py
cida/src/cida/utils/: fourier.py
