
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cida"
version = "0.5.0"
description = "CIDA with ResNet50 default, dual heads (Zc/Zs), regularizers, and timm baselines"
readme = "README.md"
authors = [{ name = "Dr." }]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "timm>=0.9.12",
    "scikit-learn>=1.2.0",
    "numpy>=1.23.0",
    "tqdm>=4.62.0",
    "pandas>=1.5.0"
]

[project.scripts]
cida = "cida.__main__:cli"
